fix keys, image-mobile aligned

--- a/src/components/profile/Profile.module.css
+++ b/src/components/profile/Profile.module.css
@@ -46,6 +46,7 @@
 	margin: 0px;
 	padding-top: 10px;
 	padding-left: 10px;
+	text-align: center;
 	border-left: solid 1px #EAEEF3;
 }
 
